--- a/lighthouse-core/report/templates/report-template.html
+++ b/lighthouse-core/report/templates/report-template.html
@@ -48,7 +48,7 @@ limitations under the License.
         </span>
         <button class="report-body__icon share js-share"></button>
         <button class="report-body__icon copy js-copy"></button>
-        {{#if_not_eq reportContext value="viewer"}}
+        {{#if_not_eq reportContext "viewer"}}
           <button class="report-body__icon print js-print"></button>
         {{/if_not_eq}}
       </div>
